--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.0",
         "cweagans/composer-patches": "1.5.0",
-        "drupal/lightning": "panels-dev"
+        "drupal/lightning": "dev-panels-dev"
     },
     "repositories": [
         {
