Try to properly load correct branch

--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,17 @@
     },
     "repositories": [
         {
-            "type": "vcs",
-            "url": "https://github.com/svendecabooter/lightning.git"
-        },    
+            "type": "package",
+            "package": {
+                "name": "drupal/lightning",
+                "version": "dev-panels-dev",
+                "source": {
+                    "url": "https://github.com/svendecabooter/lightning.git",
+                    "type": "git",
+                    "reference": "panels-dev"
+                }
+            }
+        },  
         {
             "type": "composer",
             "url": "https://packagist.drupal-composer.org"
