Revert "Try to properly load correct branch"
This reverts commit 9c1157552d31517f7c64d35278fa40d18854833a.

--- a/composer.json
+++ b/composer.json
@@ -24,17 +24,9 @@
     },
     "repositories": [
         {
-            "type": "package",
-            "package": {
-                "name": "drupal/lightning",
-                "version": "dev-panels-dev",
-                "source": {
-                    "url": "https://github.com/svendecabooter/lightning.git",
-                    "type": "git",
-                    "reference": "panels-dev"
-                }
-            }
-        },  
+            "type": "vcs",
+            "url": "https://github.com/svendecabooter/lightning.git"
+        },    
         {
             "type": "composer",
             "url": "https://packagist.drupal-composer.org"
